# spatial-model-editor

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  ci-build.sh  ci-travis-windows-gui.bat  ci-travis-windows-wheels.bat  ci-wheels.bat  ci-wheels.sh  codecov.yml  common.pri  feature-display-plan.md  feature-optimizer-display-plan.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  numerics.cpp  numerics.h  plan.md  pyproject.toml  qlabelmousetracker.cpp  qlabelmousetracker.h  qmake.pro  sbml.cpp  sbml.h  setup.py  sonar-project.properties  (+3 more)
app/: CMakeLists.txt  app.pro  icon.rc  icon.xcf  spatial-model-editor.cpp
benchmark/: CMakeLists.txt  README.md  bench.cpp  bench.hpp  benchmark.cpp  benchmark.pro  pixel.cpp  plot.py  resource_utils.hpp  update_benchmarks.sh
cli/: CMakeLists.txt  cli.pro  spatial-cli.cpp
cli/src/: CMakeLists.txt  cli_command.cpp  cli_command.hpp  cli_command_t.cpp  cli_params.cpp  cli_params.hpp  cli_params_t.cpp  cli_simulate.cpp  cli_simulate.hpp  cli_simulate_t.cpp
core/: CMakeLists.txt
core/cmake/: smeConfig.cmake.in
core/common/: CMakeLists.txt
core/model/: CMakeLists.txt
core/resources/: resources.qrc
core/simulate/: CMakeLists.txt
ext/qcustomplot/: CMakeLists.txt  qcustomplot.h  qcustomplot.pro
gui/: CMakeLists.txt  guiutils.cpp  guiutils.hpp  guiutils_t.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindow_t.cpp
gui/dialogs/: CMakeLists.txt  dependency_versions.cpp  dependency_versions.hpp  dialogabout.cpp  dialogabout.hpp  dialogabout.ui  dialogabout_t.cpp  dialoganalytic.cpp  dialoganalytic.hpp  dialoganalytic.ui  dialoganalytic_t.cpp  dialogconcentrationimage.cpp  dialogconcentrationimage.hpp  dialogconcentrationimage.ui  dialogconcentrationimage_t.cpp  dialogcoordinates.cpp  dialogcoordinates.hpp  dialogcoordinates.ui  dialogcoordinates_t.cpp  dialogdisplayoptions.cpp  dialogdisplayoptions.hpp  dialogdisplayoptions.ui  dialogdisplayoptions_t.cpp  dialogeditunit.cpp  dialogeditunit.hpp  dialogeditunit.ui  dialogeditunit_t.cpp  dialogexport.cpp  dialogexport.hpp  dialogexport.ui  dialogexport_t.cpp  dialoggeometryimage.cpp  dialoggeometryimage.hpp  dialoggeometryimage.ui  dialoggeometryimage_t.cpp  dialoggeometryorigin.cpp  dialoggeometryorigin.hpp  dialoggeometryorigin.ui  dialoggeometryorigin_t.cpp  dialogimage.cpp  (+51 more)
gui/rendering/: CMakeLists.txt  Camera.cpp  Camera.hpp  ClipPlane.cpp  ClipPlane.hpp  ClippingPlane.cpp  ClippingPlane.hpp  Config.h  IArray.cpp  IArray.hpp  Node.cpp  Node.hpp  Node_t.cpp  ObjectInfo.hpp  ObjectLoader.cpp  ObjectLoader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Utils.cpp  Utils.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  WireframeObject.cpp  WireframeObject.hpp  WireframeObjects.cpp  WireframeObjects.hpp  rendering.hpp
gui/tabs/: CMakeLists.txt  tabevents.cpp  tabevents.hpp  tabevents_t.cpp  tabfeatures.cpp  tabfeatures.hpp  tabfeatures.ui  tabfeatures_t.cpp  tabfunctions.cpp  tabfunctions.hpp  tabfunctions.ui  tabfunctions_t.cpp  tabgeometry.cpp  tabgeometry.hpp  tabgeometry.ui  tabgeometry_t.cpp  tabparameters.cpp  tabparameters.hpp  tabparameters.ui  tabparameters_t.cpp  tabreactions.cpp  tabreactions.hpp  tabreactions_t.cpp  tabsimulate.cpp  tabsimulate.hpp  tabsimulate.ui  tabsimulate_t.cpp  tabspecies.cpp  tabspecies.hpp  tabspecies.ui  tabspecies_t.cpp
gui/widgets/: CMakeLists.txt  QOpenGLMouseTracker.cpp  QOpenGLMouseTracker.hpp  QOpenGLMouseTracker_t.cpp  gpumemoryusagebarwidget.cpp  gpumemoryusagebarwidget.hpp  gpumemoryusagebarwidget_t.cpp  imagerenderutils.cpp  imagerenderutils.hpp  imagerenderutils_t.cpp  memoryusagebarwidget.cpp  memoryusagebarwidget.hpp  memoryusagebarwidget_t.cpp  plotwrapper.cpp  plotwrapper.hpp  plotwrapper_t.cpp  qlabelmousetracker.cpp  qlabelmousetracker.hpp  qlabelmousetracker_t.cpp  qlabelslice.cpp  qlabelslice.hpp  qlabelslice_t.cpp  qmeshrenderer.cpp  qmeshrenderer.hpp  qmeshrenderer_t.cpp  qopenglmousetracker.cpp  qopenglmousetracker.h  qopenglmousetracker.hpp  qopenglmousetracker_t.cpp  qopengltriangle.cpp  qopengltriangle.hpp  qopengltriangle_t.cpp  qplaintextmathedit.cpp  qplaintextmathedit.hpp  qplaintextmathedit_t.cpp  qvoxelrenderer.cpp  qvoxelrenderer.hpp  qvoxelrenderer_t.cpp  regioncolorslabel.cpp  regioncolorslabel.hpp  (+4 more)
gui/wizards/: CMakeLists.txt  ode_import_wizard.cpp  ode_import_wizard.hpp  ode_import_wizard_t.cpp
sme/: CMakeLists.txt  README.md  requirements-test.txt  sme.cpp  sme_common.cpp  sme_common.hpp  sme_compartment.cpp  sme_compartment.hpp  sme_getting_started.ipynb  sme_membrane.cpp  sme_membrane.hpp  sme_model.cpp  sme_model.hpp  sme_module.cpp  sme_module.hpp  sme_parameter.cpp  sme_parameter.hpp  sme_reaction.cpp  sme_reaction.hpp  sme_reactionparameter.cpp  sme_reactionparameter.hpp  sme_simulationresult.cpp  sme_simulationresult.hpp  sme_species.cpp  sme_species.hpp
sme/src/: CMakeLists.txt  sme_common.cpp  sme_common.hpp  sme_compartment.cpp  sme_compartment.hpp  sme_exception.cpp  sme_exception.hpp  sme_membrane.cpp  sme_membrane.hpp  sme_model.cpp  sme_model.hpp  sme_module.cpp  sme_module.hpp  sme_parameter.cpp  sme_parameter.hpp  sme_reaction.cpp  sme_reaction.hpp  (+6 more)
src/: CMakeLists.txt  boundary.cpp  colours.cpp  dialogabout.cpp  dialoganalytic.cpp  dialogconcentrationimage.cpp  dialogdimensions.cpp  dialogimagesize.cpp  dialogunits.cpp  dune.cpp  geometry.cpp  icon.rc  main.cpp  mainwindow.cpp  mesh.cpp  model.cpp  numerics.cpp  ostream_overloads.cpp  pde.cpp  qlabelmousetracker.cpp  qplaintextmathedit.cpp  reactions.cpp  sbml.cpp  simulate.cpp  spatial-model-editor.cpp  src.pri  src.pro  symbolic.cpp  tiff.cpp  triangle_wrapper.cpp  triangulate.cpp  units.cpp  utils.cpp  version.cpp
test/: CMakeLists.txt  README.md  main.cpp  test.pro  test.py  test_geometry.cpp  test_mainwindow.cpp  test_numerics.cpp  test_qlabelmousetracker.cpp  test_qlabeltracker.cpp  test_sbml.cpp  test_simulate.cpp
(+1072 files in other folders)
