[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "sme"
version = "1.9.0"
description = "Spatial Model Editor python bindings"
readme = "README.md"
license = {text = "MIT"}
authors=[{name="Liam Keegan", email="liam@keegan.ch"}]
requires-python = ">=3.8"
classifiers=[
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy"
]

[project.urls]
Documentation = "https://spatial-model-editor.readthedocs.io/"
Github = "https://github.com/spatial-model-editor/spatial-model-editor"
Issues = "https://github.com/spatial-model-editor/spatial-model-editor/issues"
"Try it online" = "https://colab.research.google.com/github/spatial-model-editor/spatial-model-editor/blob/main/docs/sme/notebooks/getting_started.ipynb"

[project.optional-dependencies]
test = ["pytest", "matplotlib"]

[tool.scikit-build]
cmake.verbose = true
logging.level = "DEBUG"

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"
SME_BUILD_BENCHMARKS = "OFF"
SME_BUILD_CLI = "OFF"
SME_BUILD_GUI = "OFF"
SME_LOG_LEVEL = "OFF"

[tool.cibuildwheel]
build-verbosity = 3
test-extras = "test"
test-command = "python -m pytest {project}/sme/test -v"
skip = '*-manylinux_i686 *-musllinux* *-win32'
